--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@
   background-color: #b494ff;
   color: #fff;
   text-align: left;
+  font-size: 0.9rem;
+  font-family: Arial, Helvetica, sans-serif;
   border-radius: 5px;
   border: 2px solid #0d082d; 
   padding: 5px;
